plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'wtf.moonlight'
version = '1.8.9'

// Centralized version declarations
ext {
    gsonVersion = '2.2.4'
}

project.ext.lwjglVersion = "3.3.5"
project.ext.lwjglNatives = "natives-windows"

/*switch (OperatingSystem.current()) {
    case OperatingSystem.LINUX:
        project.ext.lwjglNatives = "natives-linux"
        def osArch = System.getProperty("os.arch")
        if (osArch.startsWith("arm") || osArch.startsWith("aarch64")) {
            project.ext.lwjglNatives += osArch.contains("64") || osArch.startsWith("armv8") ? "-arm64" : "-arm32"
        } else if  (osArch.startsWith("ppc")) {
            project.ext.lwjglNatives += "-ppc64le"
        } else if  (osArch.startsWith("riscv")) {
            project.ext.lwjglNatives += "-riscv64"
        }
        break
    case OperatingSystem.MAC_OS:
        project.ext.lwjglNatives = System.getProperty("os.arch").startsWith("aarch64") ? "natives-macos-arm64" : "natives-macos"
        break
    case OperatingSystem.WINDOWS:
        def osArch = System.getProperty("os.arch")
        project.ext.lwjglNatives = osArch.contains("64")
                ? "natives-windows${osArch.startsWith("aarch64") ? "-arm64" : ""}"
                : "natives-windows-x86"
        break
}*/

repositories {
    mavenCentral()
}

dependencies {
    implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")

    implementation "org.lwjgl:lwjgl"
    implementation "org.lwjgl:lwjgl-glfw"
    implementation "org.lwjgl:lwjgl-nanovg"
    implementation "org.lwjgl:lwjgl-openal"
    implementation "org.lwjgl:lwjgl-opengl"
    runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-nanovg::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
}

repositories {
    mavenCentral()
    maven {
        url 'https://repo.marcloud.net/'
        name 'MarCloud-Repository'
    }
    maven {
        url "https://libraries.minecraft.net/"
    }
    maven {
        url "https://mvnrepository.com/artifact"
    }
}

shadowJar {
    archiveClassifier.set('all')
    configurations = [project.configurations.runtimeClasspath]
}

compileJava {
    sourceCompatibility = '17'
    targetCompatibility = '17'
    options.encoding = 'UTF-8'
}

dependencies {
    implementation 'io.netty:netty-all:5.0.0.Alpha2'
    implementation "net.sf.jopt-simple:jopt-simple:4.6"

    implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")

    implementation "org.lwjgl:lwjgl"
    implementation "org.lwjgl:lwjgl-glfw"
    implementation "org.lwjgl:lwjgl-nanovg"
    implementation "org.lwjgl:lwjgl-openal"
    implementation "org.lwjgl:lwjgl-opengl"
    runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-nanovg::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"

    // Lombok
    implementation 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'
    compileOnly 'org.projectlombok:lombok:1.18.28'

    // Other dependencies
    implementation "net.java.jinput:jinput:2.0.5"
    implementation "com.mojang:icu4j-core-mojang:51.2"
    implementation "org.apache.httpcomponents:httpclient:4.3.3"
    implementation "org.apache.httpcomponents:httpcore:4.3.2"
    implementation "oshi:oshi-core:1.1"
    implementation "net.java.dev.jna:jna:3.4.0"
    implementation "net.java.dev.jna:platform:3.4.0"
    implementation "net.java.jutils:jutils:1.0.0"
    implementation "commons-logging:commons-logging:1.1.3"
    implementation "org.apache.commons:commons-compress:1.8.1"
    implementation "org.apache.logging.log4j:log4j-api:2.0-beta9"
    implementation "org.apache.logging.log4j:log4j-core:2.0-beta9"
    implementation "tv.twitch:twitch:6.5"
    implementation "com.google.guava:guava:17.0"
    implementation "org.apache.commons:commons-lang3:3.3.2"
    implementation "commons-io:commons-io:2.4"
    implementation "commons-codec:commons-codec:1.9"
    implementation "com.google.code.gson:gson:${gsonVersion}"
    implementation "com.paulscode.sound:libraryjavasound:20101123"
    implementation "com.paulscode.sound:codecwav:20101023"
    implementation "com.paulscode.sound:soundsystem:20120107"
    implementation "com.paulscode.sound:codecjorbis:20101023"

    implementation "com.mojang:authlib:1.5.21"

    implementation 'it.unimi.dsi:fastutil:8.5.13'
    implementation 'org.json:json:20240303'
    implementation 'org.joml:joml:1.10.7'
    implementation 'org.jetbrains:annotations:24.1.0'

    implementation 'com.madgag:animated-gif-lib:1.4'

    implementation fileTree(dir: 'libs', include: '*.jar')
    compileOnly fileTree(dir: 'libs', include: '*.jar')
    testCompileOnly fileTree(dir: 'libs', include: '*.jar')
}